# Zero-AI

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: attachments.rs  error.rs  events.rs  lib.rs  main.rs  paths.rs  secrets.rs  settings.rs  state.rs  workspace.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/agents_md/: mod.rs
src-tauri/src/chat/: diff.rs  mod.rs  runner.rs
src-tauri/src/commands/: agents_md.rs  attachments.rs  audio.rs  chat.rs  documents.rs  hooks.rs  llama.rs  mcp.rs  memory.rs  mod.rs  models.rs  settings.rs  skills.rs  system.rs  tasks.rs  workspace.rs
src-tauri/src/db/: llama_variant_state.rs  mod.rs  runtimes.rs
src-tauri/src/documents/: mod.rs
src-tauri/src/hf/: api.rs  download.rs  jobs.rs  mod.rs  select.rs
src-tauri/src/hooks/: mod.rs
src-tauri/src/llama/: github.rs  health.rs  install.rs  mod.rs  preset.rs  process.rs  tts.rs  variant.rs
src-tauri/src/llm/: llamacpp.rs  mod.rs  ollama.rs  openai_compat.rs
src-tauri/src/mcp/: catalog.rs  client.rs  mod.rs
src-tauri/src/mcp/tools/: clipboard.rs  code.rs  discovery.rs  fs.rs  http.rs  memory.rs  mod.rs  recall.rs  shell.rs  skill.rs  task.rs  ui.rs  web.rs
src-tauri/src/memory/: mod.rs
src-tauri/src/skills/: mod.rs
src-tauri/src/system/: mod.rs  recommend.rs
src-tauri/src/tasks/: mod.rs  scheduler.rs
src-tauri/src/whisper/: github.rs  install.rs  mod.rs  model.rs
src/components/: SamplingEditor.tsx
src/components/layout/: BottomBar.tsx  Shell.tsx  Sidebar.tsx  TitleBar.tsx
src/components/server/: ServerControls.tsx  ServerLogsPopover.tsx
src/components/tui/: Button.tsx  CommandPalette.tsx  Input.tsx  Markdown.tsx  Panel.tsx  ProgressBar.tsx  Spinner.tsx  StatusBar.tsx  Toggle.tsx
src/lib/: audioModels.ts  format.ts  modelCategory.ts  modelParams.ts  modelProfile.ts  modelTasks.ts  recommendedModels.ts  tauri.ts
src/pages/: AgentsMd.tsx  Chat.tsx  Embedding.tsx  Hooks.tsx  Memory.tsx  Models.tsx  Settings.tsx  Skills.tsx  Tasks.tsx  Tools.tsx
src/stores/: agents_md.ts  chat.ts  documents.ts  hooks.ts  llama.ts  mcp.ts  memory.ts  models.ts  server.ts  settings.ts  skills.ts  system.ts  tasks.ts  ui.ts  workspace.ts
