[package]
name = "zero"
version = "1.0.0"
description = "ZerØ — local agentic AI"
authors = ["zero"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "zero_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
# Faster global allocator. The heavy tensor/GPU work lives in the external
# runtime server, but the Tauri process still churns small allocations in the
# SSE streaming loop, JSON parsing, and SQLite — and Windows' default heap is
# the weakest, so it benefits most. Wired up as `#[global_allocator]` in main.rs.
mimalloc = "0.1"
# Dev-only Tokio task introspection (tokio-console). Off by default; enable with
# `--features tokio-console` AND build with `RUSTFLAGS="--cfg tokio_unstable"`.
console-subscriber = { version = "0.4", optional = true }
async-trait = "0.1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
directories = "5"
sysinfo = "0.32"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], default-features = false }
once_cell = "1"
zip = { version = "2", default-features = false, features = ["deflate", "bzip2"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }
sha2 = "0.10"
base64 = "0.22"
arboard = { version = "3", default-features = false }
regex = "1"
llmfit-core = "0.9"
walkdir = "2"
globset = "0.4"
# HTML parsing for the built-in web.search / web.read_page / web.deep_research
# tools. `scraper` wraps html5ever with a CSS-selector API — robust enough
# to deal with messy real-world pages without us hand-rolling regex.
scraper = { version = "0.20", default-features = false }
ego-tree = "0.6"
urlencoding = "2"
url = "2"
# tokio-cron-scheduler = "0.13"   # superseded by the in-house scheduler in `tasks::scheduler`

[target.'cfg(windows)'.dependencies]
wmi = "0.14"
windows = { version = "0.61", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
] }

# ─── Workarounds ────────────────────────────────────────────────────────────
# `cookie 0.18.1` (pulled transitively by tauri's webview stack) fails to
# compile against `time >= 0.3.42` because of duplicate `From<HourBase>` impls.
# Pin `time` to the last known-good version until upstream cuts a fix.
[dependencies.time]
version = "=0.3.41"
features = ["formatting", "parsing", "macros"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enables the tokio-console layer in `init_tracing`. Dev-only diagnostics for
# the async streaming pipeline; see the dependency note above for the required
# `tokio_unstable` build flag.
tokio-console = ["dep:console-subscriber"]
